jdk2pq/src/turtle_project_bison/turtle.output
Terminals which are not used

   THEN
   TRUE
   FALSE
   RETURN


Grammar

    0 $accept: program $end

    1 program: head decllist stmtlist tail

    2 head: /* empty */

    3 tail: /* empty */

    4 decllist: /* empty */
    5         | decllist decl

    6 decl: VAR ID SEMICOLON

    7 stmtlist: /* empty */
    8         | stmtlist stmt

    9 stmt: ID ASSIGN expr SEMICOLON
   10     | GO expr SEMICOLON
   11     | JUMP expr SEMICOLON
   12     | TURN expr SEMICOLON

   13 @1: /* empty */

   14 stmt: IF expr OPENB @1 stmtlist CLOSEB cond

   15 cond: /* empty */

   16 @2: /* empty */

   17 cond: @2 ELSE OPENB stmtlist CLOSEB

   18 @3: /* empty */

   19 stmt: FOR ID ASSIGN expr STEP expr TO expr DO @3 stmt
   20     | COPEN stmtlist CCLOSE

   21 expr: expr PLUS term
   22     | expr MINUS term
   23     | term

   24 term: term EQ factor
   25     | term NOTEQ factor
   26     | term GTE factor
   27     | term LTE factor
   28     | term LT factor
   29     | term GT factor
   30     | term TIMES factor
   31     | term DIV factor
   32     | factor

   33 factor: MINUS atomic
   34       | PLUS atomic
   35       | SIN factor
   36       | COS factor
   37       | SQRT factor
   38       | atomic

   39 atomic: OPEN expr CLOSE
   40       | NUMBER
   41       | FLOAT
   42       | ID


Terminals, with rules where they appear

$end (0) 0
error (256)
GO (258) 10
TURN (259) 12
VAR (260) 6
JUMP (261) 11
FOR (262) 19
STEP (263) 19
TO (264) 19
DO (265) 19
COPEN (266) 20
CCLOSE (267) 20
SIN (268) 35
COS (269) 36
SQRT (270) 37
FLOAT (271) 41
ID (272) 6 9 19 42
NUMBER (273) 40
SEMICOLON (274) 6 9 10 11 12
PLUS (275) 21 34
MINUS (276) 22 33
TIMES (277) 30
DIV (278) 31
OPEN (279) 39
CLOSE (280) 39
ASSIGN (281) 9 19
IF (282) 14
ELSE (283) 17
THEN (284)
TRUE (285)
FALSE (286)
RETURN (287)
LT (288) 28
GT (289) 29
EQ (290) 24
OPENB (291) 14 17
CLOSEB (292) 14 17
NOTEQ (293) 25
LTE (294) 27
GTE (295) 26


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
head (43)
    on left: 2, on right: 1
tail (44)
    on left: 3, on right: 1
decllist (45)
    on left: 4 5, on right: 1 5
decl (46)
    on left: 6, on right: 5
stmtlist (47)
    on left: 7 8, on right: 1 8 14 17 20
stmt (48)
    on left: 9 10 11 12 14 19 20, on right: 8 19
@1 (49)
    on left: 13, on right: 14
cond (50)
    on left: 15 17, on right: 14
@2 (51)
    on left: 16, on right: 17
@3 (52)
    on left: 18, on right: 19
expr (53)
    on left: 21 22 23, on right: 9 10 11 12 14 19 21 22 39
term (54)
    on left: 24 25 26 27 28 29 30 31 32, on right: 21 22 23 24 25 26
    27 28 29 30 31
factor (55)
    on left: 33 34 35 36 37 38, on right: 24 25 26 27 28 29 30 31 32
    35 36 37
atomic (56)
    on left: 39 40 41 42, on right: 33 34 38


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (head)

    program  go to state 1
    head     go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: head . decllist stmtlist tail

    $default  reduce using rule 4 (decllist)

    decllist  go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    1 program: head decllist . stmtlist tail
    5 decllist: decllist . decl

    VAR  shift, and go to state 5

    $default  reduce using rule 7 (stmtlist)

    decl      go to state 6
    stmtlist  go to state 7


state 5

    6 decl: VAR . ID SEMICOLON

    ID  shift, and go to state 8


state 6

    5 decllist: decllist decl .

    $default  reduce using rule 5 (decllist)


state 7

    1 program: head decllist stmtlist . tail
    8 stmtlist: stmtlist . stmt

    GO     shift, and go to state 9
    TURN   shift, and go to state 10
    JUMP   shift, and go to state 11
    FOR    shift, and go to state 12
    COPEN  shift, and go to state 13
    ID     shift, and go to state 14
    IF     shift, and go to state 15

    $default  reduce using rule 3 (tail)

    tail  go to state 16
    stmt  go to state 17


state 8

    6 decl: VAR ID . SEMICOLON

    SEMICOLON  shift, and go to state 18


state 9

   10 stmt: GO . expr SEMICOLON

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 28
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 10

   12 stmt: TURN . expr SEMICOLON

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 32
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 11

   11 stmt: JUMP . expr SEMICOLON

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 33
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 12

   19 stmt: FOR . ID ASSIGN expr STEP expr TO expr DO @3 stmt

    ID  shift, and go to state 34


state 13

   20 stmt: COPEN . stmtlist CCLOSE

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 35


state 14

    9 stmt: ID . ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 36


state 15

   14 stmt: IF . expr OPENB @1 stmtlist CLOSEB cond

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 37
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 16

    1 program: head decllist stmtlist tail .

    $default  reduce using rule 1 (program)


state 17

    8 stmtlist: stmtlist stmt .

    $default  reduce using rule 8 (stmtlist)


state 18

    6 decl: VAR ID SEMICOLON .

    $default  reduce using rule 6 (decl)


state 19

   35 factor: SIN . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 38
    atomic  go to state 31


state 20

   36 factor: COS . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 39
    atomic  go to state 31


state 21

   37 factor: SQRT . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 40
    atomic  go to state 31


state 22

   41 atomic: FLOAT .

    $default  reduce using rule 41 (atomic)


state 23

   42 atomic: ID .

    $default  reduce using rule 42 (atomic)


state 24

   40 atomic: NUMBER .

    $default  reduce using rule 40 (atomic)


state 25

   34 factor: PLUS . atomic

    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    OPEN    shift, and go to state 27

    atomic  go to state 41


state 26

   33 factor: MINUS . atomic

    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    OPEN    shift, and go to state 27

    atomic  go to state 42


state 27

   39 atomic: OPEN . expr CLOSE

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 43
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 28

   10 stmt: GO expr . SEMICOLON
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    SEMICOLON  shift, and go to state 44
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46


state 29

   23 expr: term .
   24 term: term . EQ factor
   25     | term . NOTEQ factor
   26     | term . GTE factor
   27     | term . LTE factor
   28     | term . LT factor
   29     | term . GT factor
   30     | term . TIMES factor
   31     | term . DIV factor

    TIMES  shift, and go to state 47
    DIV    shift, and go to state 48
    LT     shift, and go to state 49
    GT     shift, and go to state 50
    EQ     shift, and go to state 51
    NOTEQ  shift, and go to state 52
    LTE    shift, and go to state 53
    GTE    shift, and go to state 54

    $default  reduce using rule 23 (expr)


state 30

   32 term: factor .

    $default  reduce using rule 32 (term)


state 31

   38 factor: atomic .

    $default  reduce using rule 38 (factor)


state 32

   12 stmt: TURN expr . SEMICOLON
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    SEMICOLON  shift, and go to state 55
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46


state 33

   11 stmt: JUMP expr . SEMICOLON
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    SEMICOLON  shift, and go to state 56
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46


state 34

   19 stmt: FOR ID . ASSIGN expr STEP expr TO expr DO @3 stmt

    ASSIGN  shift, and go to state 57


state 35

    8 stmtlist: stmtlist . stmt
   20 stmt: COPEN stmtlist . CCLOSE

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    CCLOSE  shift, and go to state 58
    ID      shift, and go to state 14
    IF      shift, and go to state 15

    stmt  go to state 17


state 36

    9 stmt: ID ASSIGN . expr SEMICOLON

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 59
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 37

   14 stmt: IF expr . OPENB @1 stmtlist CLOSEB cond
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    PLUS   shift, and go to state 45
    MINUS  shift, and go to state 46
    OPENB  shift, and go to state 60


state 38

   35 factor: SIN factor .

    $default  reduce using rule 35 (factor)


state 39

   36 factor: COS factor .

    $default  reduce using rule 36 (factor)


state 40

   37 factor: SQRT factor .

    $default  reduce using rule 37 (factor)


state 41

   34 factor: PLUS atomic .

    $default  reduce using rule 34 (factor)


state 42

   33 factor: MINUS atomic .

    $default  reduce using rule 33 (factor)


state 43

   21 expr: expr . PLUS term
   22     | expr . MINUS term
   39 atomic: OPEN expr . CLOSE

    PLUS   shift, and go to state 45
    MINUS  shift, and go to state 46
    CLOSE  shift, and go to state 61


state 44

   10 stmt: GO expr SEMICOLON .

    $default  reduce using rule 10 (stmt)


state 45

   21 expr: expr PLUS . term

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    term    go to state 62
    factor  go to state 30
    atomic  go to state 31


state 46

   22 expr: expr MINUS . term

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    term    go to state 63
    factor  go to state 30
    atomic  go to state 31


state 47

   30 term: term TIMES . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 64
    atomic  go to state 31


state 48

   31 term: term DIV . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 65
    atomic  go to state 31


state 49

   28 term: term LT . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 66
    atomic  go to state 31


state 50

   29 term: term GT . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 67
    atomic  go to state 31


state 51

   24 term: term EQ . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 68
    atomic  go to state 31


state 52

   25 term: term NOTEQ . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 69
    atomic  go to state 31


state 53

   27 term: term LTE . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 70
    atomic  go to state 31


state 54

   26 term: term GTE . factor

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    factor  go to state 71
    atomic  go to state 31


state 55

   12 stmt: TURN expr SEMICOLON .

    $default  reduce using rule 12 (stmt)


state 56

   11 stmt: JUMP expr SEMICOLON .

    $default  reduce using rule 11 (stmt)


state 57

   19 stmt: FOR ID ASSIGN . expr STEP expr TO expr DO @3 stmt

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 72
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 58

   20 stmt: COPEN stmtlist CCLOSE .

    $default  reduce using rule 20 (stmt)


state 59

    9 stmt: ID ASSIGN expr . SEMICOLON
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    SEMICOLON  shift, and go to state 73
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46


state 60

   14 stmt: IF expr OPENB . @1 stmtlist CLOSEB cond

    $default  reduce using rule 13 (@1)

    @1  go to state 74


state 61

   39 atomic: OPEN expr CLOSE .

    $default  reduce using rule 39 (atomic)


state 62

   21 expr: expr PLUS term .
   24 term: term . EQ factor
   25     | term . NOTEQ factor
   26     | term . GTE factor
   27     | term . LTE factor
   28     | term . LT factor
   29     | term . GT factor
   30     | term . TIMES factor
   31     | term . DIV factor

    TIMES  shift, and go to state 47
    DIV    shift, and go to state 48
    LT     shift, and go to state 49
    GT     shift, and go to state 50
    EQ     shift, and go to state 51
    NOTEQ  shift, and go to state 52
    LTE    shift, and go to state 53
    GTE    shift, and go to state 54

    $default  reduce using rule 21 (expr)


state 63

   22 expr: expr MINUS term .
   24 term: term . EQ factor
   25     | term . NOTEQ factor
   26     | term . GTE factor
   27     | term . LTE factor
   28     | term . LT factor
   29     | term . GT factor
   30     | term . TIMES factor
   31     | term . DIV factor

    TIMES  shift, and go to state 47
    DIV    shift, and go to state 48
    LT     shift, and go to state 49
    GT     shift, and go to state 50
    EQ     shift, and go to state 51
    NOTEQ  shift, and go to state 52
    LTE    shift, and go to state 53
    GTE    shift, and go to state 54

    $default  reduce using rule 22 (expr)


state 64

   30 term: term TIMES factor .

    $default  reduce using rule 30 (term)


state 65

   31 term: term DIV factor .

    $default  reduce using rule 31 (term)


state 66

   28 term: term LT factor .

    $default  reduce using rule 28 (term)


state 67

   29 term: term GT factor .

    $default  reduce using rule 29 (term)


state 68

   24 term: term EQ factor .

    $default  reduce using rule 24 (term)


state 69

   25 term: term NOTEQ factor .

    $default  reduce using rule 25 (term)


state 70

   27 term: term LTE factor .

    $default  reduce using rule 27 (term)


state 71

   26 term: term GTE factor .

    $default  reduce using rule 26 (term)


state 72

   19 stmt: FOR ID ASSIGN expr . STEP expr TO expr DO @3 stmt
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    STEP   shift, and go to state 75
    PLUS   shift, and go to state 45
    MINUS  shift, and go to state 46


state 73

    9 stmt: ID ASSIGN expr SEMICOLON .

    $default  reduce using rule 9 (stmt)


state 74

   14 stmt: IF expr OPENB @1 . stmtlist CLOSEB cond

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 76


state 75

   19 stmt: FOR ID ASSIGN expr STEP . expr TO expr DO @3 stmt

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 77
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 76

    8 stmtlist: stmtlist . stmt
   14 stmt: IF expr OPENB @1 stmtlist . CLOSEB cond

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    ID      shift, and go to state 14
    IF      shift, and go to state 15
    CLOSEB  shift, and go to state 78

    stmt  go to state 17


state 77

   19 stmt: FOR ID ASSIGN expr STEP expr . TO expr DO @3 stmt
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    TO     shift, and go to state 79
    PLUS   shift, and go to state 45
    MINUS  shift, and go to state 46


state 78

   14 stmt: IF expr OPENB @1 stmtlist CLOSEB . cond

    ELSE      reduce using rule 16 (@2)
    $default  reduce using rule 15 (cond)

    cond  go to state 80
    @2    go to state 81


state 79

   19 stmt: FOR ID ASSIGN expr STEP expr TO . expr DO @3 stmt

    SIN     shift, and go to state 19
    COS     shift, and go to state 20
    SQRT    shift, and go to state 21
    FLOAT   shift, and go to state 22
    ID      shift, and go to state 23
    NUMBER  shift, and go to state 24
    PLUS    shift, and go to state 25
    MINUS   shift, and go to state 26
    OPEN    shift, and go to state 27

    expr    go to state 82
    term    go to state 29
    factor  go to state 30
    atomic  go to state 31


state 80

   14 stmt: IF expr OPENB @1 stmtlist CLOSEB cond .

    $default  reduce using rule 14 (stmt)


state 81

   17 cond: @2 . ELSE OPENB stmtlist CLOSEB

    ELSE  shift, and go to state 83


state 82

   19 stmt: FOR ID ASSIGN expr STEP expr TO expr . DO @3 stmt
   21 expr: expr . PLUS term
   22     | expr . MINUS term

    DO     shift, and go to state 84
    PLUS   shift, and go to state 45
    MINUS  shift, and go to state 46


state 83

   17 cond: @2 ELSE . OPENB stmtlist CLOSEB

    OPENB  shift, and go to state 85


state 84

   19 stmt: FOR ID ASSIGN expr STEP expr TO expr DO . @3 stmt

    $default  reduce using rule 18 (@3)

    @3  go to state 86


state 85

   17 cond: @2 ELSE OPENB . stmtlist CLOSEB

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 87


state 86

   19 stmt: FOR ID ASSIGN expr STEP expr TO expr DO @3 . stmt

    GO     shift, and go to state 9
    TURN   shift, and go to state 10
    JUMP   shift, and go to state 11
    FOR    shift, and go to state 12
    COPEN  shift, and go to state 13
    ID     shift, and go to state 14
    IF     shift, and go to state 15

    stmt  go to state 88


state 87

    8 stmtlist: stmtlist . stmt
   17 cond: @2 ELSE OPENB stmtlist . CLOSEB

    GO      shift, and go to state 9
    TURN    shift, and go to state 10
    JUMP    shift, and go to state 11
    FOR     shift, and go to state 12
    COPEN   shift, and go to state 13
    ID      shift, and go to state 14
    IF      shift, and go to state 15
    CLOSEB  shift, and go to state 89

    stmt  go to state 17


state 88

   19 stmt: FOR ID ASSIGN expr STEP expr TO expr DO @3 stmt .

    $default  reduce using rule 19 (stmt)


state 89

   17 cond: @2 ELSE OPENB stmtlist CLOSEB .

    $default  reduce using rule 17 (cond)
